Add filters for zone, system, heating and cooling

--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,13 @@
   color: #61dafb;
 }
 
+.App-report {
+  margin-top: 50px;
+  margin-right: 50px;
+  margin-bottom: 50px;
+  margin-left: 50px;
+}
+
 .App-table {
   font-size: 9px;
 }
