--- a/src/App.css
+++ b/src/App.css
@@ -68,9 +68,23 @@
   font-size: 9px;
 }
 
-.App-textbox {
-  font-size: 12px;
+.App-card {
+  margin-bottom: 10px;
+}
+
+.App-card-header {
+  font-size: 14px;
   line-height: 0.6;
+}
+
+.App-card-body {
+  font-size: 12px;
+  line-height: 0.4;
+  width: 22rem;
+  padding-top: 20px;
+  padding-right: 5px;
+  padding-bottom: 10px;
+  padding-left: 5px;
 }
 
 @keyframes App-logo-spin {
