--- a/src/App.css
+++ b/src/App.css
@@ -64,6 +64,15 @@
   padding-left: 5px;
 }
 
+.recharts-wrapper {
+  margin : 0 auto;
+}
+
+.App-chart-title {
+  align-items: center;
+  justify-content: center;
+};
+
 .App-table {
   font-size: 9px;
 }
@@ -85,13 +94,4 @@
   padding-right: 5px;
   padding-bottom: 10px;
   padding-left: 5px;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
