--- a/src/App.css
+++ b/src/App.css
@@ -27,3 +27,10 @@
 .App-table {
   font-size: 9px;
 }
+
+.navigation-container{
+  margin-top: 20px;
+  margin-right: 30px;
+  margin-bottom: 20px;
+  margin-left: 30px;
+};
