--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,15 @@
 .App {
   text-align: center;
+  width: 980px;
+  display: grid;
+  grid-template-columns: 300px 680px;
+  grid-template-rows: auto auto auto;
+  grid-template-areas: 
+    "navigation navigation"
+    "summary detailed"
+    "fullWidth fullWidth";
+  column-gap: 12px;
+  row-gap: 12px;
 }
 
 .App-header {
@@ -33,9 +43,26 @@
   font-size: 9px;
 }
 
-.navigation-container{
-  margin-top: 20px;
-  margin-right: 30px;
-  margin-bottom: 20px;
-  margin-left: 30px;
+.App-navigation {
+  margin-top: 0px;
+  margin-right: 0px;
+  margin-bottom: 16px;
+  margin-left: 0px;
+  grid-area: navigation;
 };
+
+.App-summary-content {
+  grid-area: summary;
+  margin-left: 24px;
+}
+
+.App-detailed-content {
+  grid-area: detailed;
+  margin-right: 24px;
+}
+
+.App-full-width-content {
+  grid-area: fullWidth;
+  margin-left: 24px;
+  margin-right: 24px;
+}
