--- a/src/App.css
+++ b/src/App.css
@@ -66,3 +66,25 @@
   margin-left: 24px;
   margin-right: 24px;
 }
+
+.navigation-button-group {
+  float: left;
+}
+
+.navigation-button {
+  display: inline-block;
+  height: 24px;
+}
+
+.right-header-button-group {
+  float: right;
+}
+
+.right-header-button {
+  display: inline-block;
+  height: 24px;
+}
+
+.right-header-select {
+  display: inline-block;
+}
