--- a/src/Components/PieChart.css
+++ b/src/Components/PieChart.css
@@ -12,3 +12,19 @@
   .recharts-wrapper {
     margin : 0 auto;
   }
+
+  .pie-chart-legend-item {
+    text-align: left;
+    margin-left: 24px;
+    margin-top: 0px;
+    margin-bottom: 0px;
+  }
+
+  .pie-chart-legend-text {
+    font-size: 10px;
+    display: inline-block;
+    padding-left: 8px;
+    padding-bottom: 12px;
+    margin-top: 0px;
+    margin-bottom: 0px;
+  }
