--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,17 @@
+@font-face {
+  font-family: 'ArtifaktElement-Regular';
+  src: 
+    url('../public/fonts/WOFF2/Artifakt Element Regular.woff2') format('woff2'),
+    url('../public/fonts/WOFF/Artifakt Element Regular.woff') format('woff');
+    font-style: normal;
+    font-weight: normal;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+    sans-serif, 'ArtifaktElement-Regular';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -11,3 +20,4 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
