--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 .App {
+  font-family: 'ArtifaktElement-Regular';
   text-align: center;
   width: 980px;
   display: grid;
@@ -8,8 +9,8 @@
     "navigation navigation"
     "summary detailed"
     "fullWidth fullWidth";
-  column-gap: 12px;
-  row-gap: 12px;
+  column-gap: 0px;
+  row-gap: 0px;
 }
 
 .App-header {
@@ -44,17 +45,18 @@
 }
 
 .App-navigation {
-  margin-top: 12px;
-  margin-right: 24px;
-  margin-bottom: 16px;
-  margin-left: 24px;
+  padding-top: 12px;
+  padding-right: 24px;
+  padding-bottom: 6px;
+  padding-left: 24px;
+  margin-bottom: 10px;
   height: 40px;
   background-color: #EEEEEE;
   grid-area: navigation;
 };
 
 .navigation-group-left {
-  float: right;
+  float: left;
 }
 
 .navigation-group-right {
@@ -68,12 +70,14 @@
   border-style: none;
   outline: none; 
   background-color: #EEEEEE;
+  font-size: 12px;
 }
 
 .tab-active {
   border-style: none;
   outline: none; 
   background-color: #FFFFFF;
+  font-size: 12px;
 }
 
 .right-header-select {
@@ -89,7 +93,6 @@
   border-style: none;
   outline: none; 
   background-color: #EEEEEE;
-  font-family: ArtifaktElement-Regular;
   font-size: 12px;
 }
 
