--- a/src/Components/ReportCard.css
+++ b/src/Components/ReportCard.css
@@ -14,8 +14,12 @@
     font-size: 11px;
     line-height: 0.4;
     background-color: #EEEEEE;
-    padding-top: 10px;
-    padding-bottom: 5px;
-    padding-left: 0px;
-    padding-right: 0px;
+    padding-top: 16px;
+    padding-bottom: 16px;
+    padding-left: 16px;
+    padding-right: 16px;
+  }
+
+  .Report-card-item {
+    margin-bottom: 24px;
   }
