--- a/src/Components/Tab.css
+++ b/src/Components/Tab.css
@@ -1,4 +1,5 @@
-.tab-control__content {
+.tab-control {
+    display: inline-block;
     background-color: #f5f5f5;
     overflow-y: auto;
 }
@@ -10,85 +11,11 @@
     margin: 0;
 }
 ​
-.tab-control-tab-button-wrapper {
-    position: relative;
-    display: flex;
-    width: auto;
-    user-select: none;
-    cursor: pointer;
-    border: 0;
-    transition-duration: 0.3s;
-    transition-property: background-color;
-    padding: 8px 12px;
-}
-​
-    .tab-control-tab-button-wrapper:hover {
-        background-color: rgba(255,255,255,0.5);
-    }
-​
-.tab-control-tab.active > .tab-control-tab-button-wrapper {
-    background-color: #f5f5f5;
-}
-​
-.tab-control-tab.active .tab-control-tab-halo {
-    height: 2px;
-}
-​
-.tab-control-tab-button-content {
-    position: relative;
-    display: flex;
-    flex-grow: 1;
-    transform: none;
-    opacity: 1;
-    width: auto;
+.tab-button {
+    display: inline-block;
     height: 24px;
-}
-​
-.tab-control-tab-halo {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 0;
-    width: 100%;
-    transition-duration: 0.3s;
-    transition-property: height, width;
-    background-color: #0696d7;
-}
-​
-.tab-control-tab-button-content span {
-    display: inline-block;
-    position: absolute;
-    top: 50%;
-    left: 0;
-    transform: translateY(-50%);
-    height: 16px;
-    width: 16px;
-    overflow: hidden;
-}
-​
-.tab-control-tab-button-content > p {
-    display: inline-block;
-    position: relative;
-    background-color: transparent;
+    border-style: none;
+    border-top: 2px solid blue;
+    background-color: #EEEEEE;
     font-size: 12px;
-    font-weight: 400;
-    font-family: ArtifaktElement,sans-serif;
-    text-align: center;
-    line-height: 24px;
-    color: #3c3c3c;
-    padding-right: 0;
-    padding-left: 24px;
 }
-​
-.tab-control-tab.active .tab-control-tab-button-content > p {
-    font-weight: 700;
-}
-​
-.tab-content {
-    padding: 10px;
-}
-​
-.optimization-tab-content {
-    margin: 6px;
-}
-​
