--- a/src/Components/Tab.css
+++ b/src/Components/Tab.css
@@ -1,21 +1,17 @@
 .tab-control {
     display: inline-block;
-    background-color: #f5f5f5;
-    overflow-y: auto;
-}
-​
-.tab-control-tab {
-    overflow-y: auto;
-    position: relative;
-    display: flex;
-    margin: 0;
-}
-​
-.tab-button {
-    display: inline-block;
     height: 24px;
-    border-style: none;
+    margin-bottom: 16px;
+  }
+
+  .tab-active {
     border-top: 2px solid blue;
+    background-color: #FFFFFF;
+    font-size: 12px;
+  }
+  
+  .tab-inactive {
+    border: none;
     background-color: #EEEEEE;
     font-size: 12px;
-}
+  }
