--- a/src/Components/PieChart.css
+++ b/src/Components/PieChart.css
@@ -1,30 +1,37 @@
 
 .App-chart-container {
-    padding-top: 20px;
-    padding-bottom: 20px;
+  width: 220px;
+  margin-bottom: 12px;
+  background-color: #EEEEEE;
 }
 
 .App-chart-title {
-    align-items: center;
-    justify-content: center;
-  };
+  align-items: center;
+  justify-content: center;
+  font-size: 12px;
+  background-color: #CCCCCC
+};
   
-  .recharts-wrapper {
-    margin : 0 auto;
-  }
+.recharts-wrapper {
+  margin : 0 auto;
+}
 
-  .pie-chart-legend-item {
-    text-align: left;
-    margin-left: 24px;
-    margin-top: 0px;
-    margin-bottom: 0px;
-  }
+.pie-chart-container {
+  background-color: #EEEEEE;
+}
 
-  .pie-chart-legend-text {
-    font-size: 10px;
-    display: inline-block;
-    padding-left: 8px;
-    padding-bottom: 12px;
-    margin-top: 0px;
-    margin-bottom: 0px;
-  }
+.pie-chart-legend-item {
+  text-align: left;
+  margin-left: 24px;
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+
+.pie-chart-legend-text {
+  font-size: 10px;
+  display: inline-block;
+  padding-left: 8px;
+  padding-bottom: 12px;
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
