--- a/src/App.css
+++ b/src/App.css
@@ -43,10 +43,10 @@
 .App-navigation {
   padding-top: 12px;
   padding-right: 24px;
-  padding-bottom: 6px;
+  padding-bottom: 0px;
   padding-left: 24px;
-  margin-bottom: 10px;
-  height: 40px;
+  margin-bottom: 16px;
+  height: 52px;
   background-color: #EEEEEE;
   grid-area: navigation;
 };
@@ -67,7 +67,7 @@
 }
 
 .nav-dropdown-select {
-  border-bottom: 2px solid #3C3C3C;
+  border-bottom: 1px solid #CCCCCC;
 }
 
 .button {
