--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,8 @@ body {
     sans-serif, 'ArtifaktElement-Regular';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  display: flex;
+  justify-content: center;
 }
 
 code {
