--- a/src/Components/ReportCard.css
+++ b/src/Components/ReportCard.css
@@ -7,13 +7,13 @@
   .Report-card-header {
     font-size: 12px;
     line-height: 1.5;
-    background-color: #CCCCCC;
+    background-color: #CCCCCC59;
   }
   
   .Report-card-body {
     font-size: 11px;
     line-height: 0.4;
-    background-color: #EEEEEE;
+    background-color: #EEEEEE59;
     padding-top: 16px;
     padding-bottom: 16px;
     padding-left: 16px;
