--- a/src/Components/Table.css
+++ b/src/Components/Table.css
@@ -9,7 +9,7 @@
     font-family: 'ArtifaktElement-Regular';
     font-weight: normal;
     font-size: 12px;
-    background-color: #CCCCCC;
+    background-color: #CCCCCC59;
 }
 
 .table-header-row {
@@ -21,12 +21,12 @@
 }
 
 .table-border-left {
-    border-left: 1px solid #3C3C3C;
+    border-left: 1px solid #3C3C3C1A;
 }
 
 .table-border-top-bottom {
-    border-top: 1px solid #3C3C3C;
-    border-bottom: 1px solid #3C3C3C;
+    border-top: 1px solid #3C3C3C1A;
+    border-bottom: 1px solid #3C3C3C1A;
 }
 
 .table-value-regular {
