--- a/src/Reports/LoadSummary.css
+++ b/src/Reports/LoadSummary.css
@@ -11,6 +11,7 @@
   border: 1px solid gray;
   background-color: white;
   width: 96px;
+  outline: none !important;
 }
 
 .heating-cooling-button-active {
@@ -18,4 +19,5 @@
   background-color: gray;
   border: 1px solid gray;
   width: 96px;
+  outline: none !important;
 }
