--- a/src/Components/Tab.css
+++ b/src/Components/Tab.css
@@ -8,6 +8,7 @@
     background-color: #FFFFFF;
     font-size: 12px;
     height: 40px;
+    font-family: 'ArtifaktElement-Bold';
   }
   
   .tab-inactive {
