--- a/src/Components/PsychrometricTable.css
+++ b/src/Components/PsychrometricTable.css
@@ -47,6 +47,7 @@
     font-family: 'ArtifaktElement-Regular';
     text-align: left;
     font-size: 12px;
+    padding-left: 5px;
 }
 
 .psych-table-label-bold {
